@@ -1,7 +1,7 @@
 #!/usr/bin/env python
 
 __authors__ = "Martin Sandve Alnes"
-__date__ = "2008-08-20 -- 2012-11-05"
+__date__ = "2008-08-20 -- 2012-11-30"
 
 from ufltestcase import UflTestCase, main
 
@@ -47,47 +47,58 @@ class ConditionalsTestCase(UflTestCase):
         self.assertFalse(bool(expr1 != expr2))
 
 
-    def xtest_eq_produces_ufl_expr(self):
+    def test_eq_produces_ufl_expr(self):
         expr1 = eq(f, g)
-        expr2 = f == g
-        expr3 = f == f
-        # Correct types (no bools here!):
+        expr2 = eq(f, f)
+        expr3 = f == g
+        expr4 = f == f
+        # Correct types:
         self.assertTrue(isinstance(expr1, EQ))
         self.assertTrue(isinstance(expr2, EQ))
-        self.assertTrue(isinstance(expr3, EQ))
+        self.assertTrue(isinstance(expr3, bool))
+        self.assertTrue(isinstance(expr4, bool))
         # Comparing representations correctly:
-        self.assertTrue(bool(expr1 == expr2))
-        self.assertFalse(bool(expr2 == expr3))
+        self.assertTrue(bool(expr1 == eq(f,g)))
+        self.assertTrue(bool(expr1 != eq(g,g)))
+        self.assertTrue(bool(expr2 == eq(f,f)))
+        self.assertTrue(bool(expr2 != eq(g,f)))
         # Bool evaluation yields actual bools:
         self.assertTrue(isinstance(bool(expr1), bool))
         self.assertTrue(isinstance(bool(expr2), bool))
-        self.assertTrue(isinstance(bool(expr3), bool))
+        self.assertFalse(expr3)
+        self.assertTrue(expr4)
         # Allow use in boolean python expression context:
         # NB! This means comparing representations! Required by dict and set.
-        self.assertTrue(bool(expr1))
+        self.assertFalse(bool(expr1))
         self.assertTrue(bool(expr2))
         self.assertFalse(bool(expr3))
+        self.assertTrue(bool(expr4))
 
     def test_ne_produces_ufl_expr(self):
         expr1 = ne(f, g)
-        expr2 = f != g
-        expr3 = f != f
-        # Correct types (no bools here!):
+        expr2 = ne(f, f)
+        expr3 = f != g
+        expr4 = f != f
+        # Correct types:
         self.assertTrue(isinstance(expr1, NE))
         self.assertTrue(isinstance(expr2, NE))
+        self.assertTrue(isinstance(expr3, bool))
+        self.assertTrue(isinstance(expr4, bool))
         # Comparing representations correctly:
-        self.assertTrue(bool(expr1 == expr2))
+        self.assertTrue(bool(expr1 == ne(f, g)))
+        self.assertTrue(bool(expr1 != ne(g, g)))
+        self.assertTrue(bool(expr2 == ne(f, f)))
+        self.assertTrue(bool(expr2 != ne(g, f)))
         self.assertFalse(bool(expr2 == expr3))
         # Bool evaluation yields actual bools:
         self.assertTrue(isinstance(bool(expr1), bool))
         self.assertTrue(isinstance(bool(expr2), bool))
-        self.assertTrue(isinstance(bool(expr3), bool))
         # Allow use in boolean python expression context:
         # NB! This means the opposite of ==, i.e. comparing representations!
         self.assertTrue(bool(expr1))
-        self.assertTrue(bool(expr2))
-        self.assertFalse(bool(expr3))
-
+        self.assertFalse(bool(expr2))
+        self.assertTrue(bool(expr1))
+        self.assertFalse(bool(expr2))
 
     def test_lt_produces_ufl_expr(self):
         expr1 = lt(f, g)
